--- a/report/20241001/01_02_nonlinear_dynamical_theory_bifurcation.ipynb
+++ b/report/20241001/01_02_nonlinear_dynamical_theory_bifurcation.ipynb
@@ -17,16 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Simulation:   0%|          | 0/20000 [00:00<?, ?it/s]"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +68,16 @@
     "\n",
     "y_lm_list, idx_lm_list, b_lm_list, y_lm_flat, idx_lm_flat, b_lm_flat = local_maxima(data_list=y_list,\n",
     "                                                                                    parameter_list=b_list,\n",
-    "                                                                                    prominence=1.,\n",
+    "                                                                                    find_peaks_params={'prominence':1.0, \n",
+    "                                                                                                        'height':None, \n",
+    "                                                                                                        'distance':None, \n",
+    "                                                                                                        'threshold':None},\n",
     "                                                                                    return_flatten=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
